--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,27 @@
+# Twitch настройки
 TWITCH_BOT_USERNAME=ваш_бот
 TWITCH_BOT_TOKEN=oauth:ваш_токен_здесь
 TWITCH_CHANNEL=ваш_канал
+
+# Опционально: ID награды за баллы канала (только для аффилиатов)
 TWITCH_REWARD_ID=
+
+# === Права доступа ===
 FREE_FOR_MODS=true
 FREE_FOR_BROADCASTER=true
 FREE_FOR_SUBSCRIBERS=false
+
+# === Защита от спама ===
 COOLDOWN_MODS=30
+COOLDOWN_SUBS=120
 COOLDOWN_VIEWERS=300
-CPU_THREADS=2
+GLOBAL_QUEUE_LIMIT=10
+MAX_TEXT_LENGTH=150
+
+# === Производительность ===
+CPU_THREADS=6
+
+# === Голос бота (опционально) ===
+# Путь к .wav файлу с вашей речью (10-15 секунд чистой речи без шума)
+REFERENCE_VOICE=/reference/reference_22.wav
+USE_VOICE_CLONING=true
